@@ -7,8 +7,9 @@ PHP                                                                        NEWS
     (cmb)
   . Fixed bug GH-9918 (License information for xxHash is not included in
     README.REDIST.BINS file). (Akama Hitoshi)
+  . Fixed bug GH-9890 (OpenSSL legacy providers not available on Windows). (cmb)
 
-Pcntl:
+- Pcntl:
   . Fixed bug GH-9298 (Signal handler called after rshutdown leads to crash).
     (Erki Aring)
 
